# ImGuiPractise

./: .gitignore  CMakeLists.txt  README.md
imgui/: CMakeLists.txt  ImGuiFileDialog.h
includes/: Init.h
src/: main.cpp  tasks.h
